--- a/e/systemd/user/xorg@.service
+++ b/e/systemd/user/xorg@.service
@@ -4,4 +4,4 @@ After=xorg@%i.socket
 [Service]
 SyslogIdentifier=%p
 SuccessExitStatus=0 1
-ExecStart=/usr/bin/X :%i -nolisten tcp -noreset -verbose 2
+ExecStart=/usr/bin/X :%i -nolisten tcp -noreset -verbose 2 "vt${XDG_VTNR}"
