--- a/e/e.cfg.desktop
+++ b/e/e.cfg.desktop
@@ -2495,6 +2495,7 @@ group "Comp_Config" struct {
 ----- file: e_remember_restart.cfg
 group "E_Remember_List" struct {
 }
+----- file: evry_exebuf_cache.cfg
 ----- file: exehist.cfg
 group "E_Exehist" struct {
     group "history" list {
@@ -2585,6 +2586,7 @@ group "Module_Config" struct {
     value "show_recent" uchar: 0;
     value "version" int: 1000000;
 }
+----- file: module.everything.cache.cfg
 ----- file: module.everything.cfg
 group "Config" struct {
     group "collections" list {
@@ -2656,6 +2658,16 @@ group "Config" struct {
             value "aggregate" int: 1;
             value "enabled" int: 1;
             value "min_query" int: 0;
+            value "name" string: "All";
+            value "priority" int: -1;
+            value "top_level" int: 1;
+            value "trigger_only" int: 0;
+            value "view_mode" int: 2;
+        }
+        group "Plugin_Config" struct {
+            value "aggregate" int: 1;
+            value "enabled" int: 1;
+            value "min_query" int: 0;
             value "name" string: "Open with...";
             value "priority" int: 1;
             value "top_level" int: 1;
@@ -2664,6 +2676,16 @@ group "Config" struct {
         }
     }
     group "conf_objects" list {
+        group "Plugin_Config" struct {
+            value "aggregate" int: 1;
+            value "enabled" int: 1;
+            value "min_query" int: 0;
+            value "name" string: "All";
+            value "priority" int: -1;
+            value "top_level" int: 1;
+            value "trigger_only" int: 0;
+            value "view_mode" int: 2;
+        }
         group "Plugin_Config" struct {
             value "aggregate" int: 1;
             value "enabled" int: 1;
@@ -2707,6 +2729,16 @@ group "Config" struct {
         }
     }
     group "conf_subjects" list {
+        group "Plugin_Config" struct {
+            value "aggregate" int: 1;
+            value "enabled" int: 1;
+            value "min_query" int: 0;
+            value "name" string: "All";
+            value "priority" int: -1;
+            value "top_level" int: 1;
+            value "trigger_only" int: 0;
+            value "view_mode" int: 2;
+        }
         group "Plugin_Config" struct {
             value "aggregate" int: 1;
             value "enabled" int: 1;
