systemd.user.bt_agent: drop old -n option, use --verbose

--- a/systemd/user/bt_agent.service
+++ b/systemd/user/bt_agent.service
@@ -6,7 +6,7 @@ PartOf=startx.target bluetooth.target
 [Service]
 SyslogIdentifier=%p
 Restart=on-failure
-ExecStart=/usr/bin/env bt_agent -n -a ~/.bt_auth
+ExecStart=/usr/bin/env bt_agent -va ~/.bt_auth
 
 [Install]
 WantedBy=startx.target
