--- a/fonts.conf
+++ b/fonts.conf
@@ -19,24 +19,7 @@
 		<edit name="rgba" mode="assign"><const>rgb</const></edit>
 	</match>
 
-<!-- Exclude/Include a range of fonts for Anti Aliasing -->
-<!--
-	<match target="font">
-		<test qual="any" name="size" compare="more"><double>9</double></test>
-		<test qual="any" name="size" compare="less"><double>14</double></test>
-		<edit name="antialias" mode="assign"><bool>true</bool></edit>
-	</match>
--->
-
-<!-- And/Or disable Anti Aliasing for a range on pixel-based size.
-		Disabling this using both methods seems to fix Firefox. -->
-<!--
-	<match target="font">
-		<test compare="less" name="pixelsize" qual="any"><double>20</double></test>
-		<edit mode="assign" name="antialias"><bool>false</bool></edit>
-	</match>
--->
-
+	<!-- Hinting - can use all kinds of exceptions for it and antialiasing here -->
 	<match target="font">
 		<edit name="hinting" mode="assign"><bool>true</bool></edit>
 		<edit name="hintstyle" mode="assign"><const>hintmedium</const></edit>
