Override dpi, tidy-up xft settings

--- a/fonts.conf
+++ b/fonts.conf
@@ -3,35 +3,20 @@
 <!-- /etc/fonts/local.conf file to configure system font access -->
 <fontconfig>
 
-	<!-- Use the Autohinter -->
-	<match target="font">
-		<edit name="autohint" mode="assign"><bool>true</bool></edit>
-	</match>
+	<!-- https://wiki.archlinux.org/index.php/font_configuration -->
+	<!-- fc-match -verbose 'Luxi Sans' -->
 
-	<!-- Disable Autohinting for bold fonts -->
-	<match target="font">
-		<test name="weight" compare="more"><const>medium</const></test>
-		<edit name="autohint" mode="assign"><bool>false</bool></edit>
-	</match>
+	<!-- <match target="pattern"> -->
+	<!-- 	<edit name="dpi" mode="assign"><double>102</double></edit> -->
+	<!-- </match> -->
 
-	<!-- Enable sub-pixel rendering -->
 	<match target="font">
 		<edit name="rgba" mode="assign"><const>rgb</const></edit>
-	</match>
-
-	<!-- Hinting - can use all kinds of exceptions for it and antialiasing here -->
-	<match target="font">
+		<edit name="antialias" mode="assign"><bool>true</bool></edit>
+		<edit name="autohint" mode="assign"><bool>false</bool></edit>
 		<edit name="hinting" mode="assign"><bool>true</bool></edit>
-		<edit name="hintstyle" mode="assign"><const>hintmedium</const></edit>
+		<edit name="hintstyle" mode="assign"><const>hintnone</const></edit>
+		<edit name="lcdfilter" mode="assign"><const>lcddefault</const></edit>
 	</match>
-
-	<!-- Reject bitmap fonts in favour of Truetype, Postscript, etc. -->
-	<selectfont>
-		<rejectfont>
-			<pattern>
-				<patelt name="scalable"><bool>false</bool></patelt>
-			</pattern>
-		</rejectfont>
-	</selectfont>
 
 </fontconfig>
