--- a/e/e.cfg.desktop
+++ b/e/e.cfg.desktop
@@ -1273,12 +1273,12 @@ group "E_Config" struct {
     value "remember_internal_windows" int: 3;
     value "resize_info_follows" int: 1;
     value "resize_info_visible" int: 1;
-    value "scale.base_dpi" int: 90;
-    value "scale.factor" double: 1.0000000000000000000000000;
+    value "scale.base_dpi" int: 102;
+    value "scale.factor" double: 1.1000000000000000888178420;
     value "scale.max" double: 3.0000000000000000000000000;
     value "scale.min" double: 0.8000000000000000444089210;
     value "scale.use_custom" uchar: 0;
-    value "scale.use_dpi" uchar: 1;
+    value "scale.use_dpi" uchar: 0;
     value "screen_limits" int: 0;
     value "screensaver_ask_presentation" uchar: 0;
     value "screensaver_ask_presentation_timeout" double: 30.0000000000000000000000000;
@@ -5789,6 +5789,7 @@ group "Elm_Config" struct {
             value "text_class" string: "toolbar_item";
         }
     }
+    value "accel" string: "hw";
     value "accel_override" uchar: 1;
     value "access_mode" uchar: 0;
     value "atspi_mode" uchar: 0;
@@ -5861,7 +5862,7 @@ group "Elm_Config" struct {
     value "popup_horizontal_align" double: 0.5000000000000000000000000;
     value "popup_scrollable" uchar: 0;
     value "popup_vertical_align" double: 0.5000000000000000000000000;
-    value "scale" double: 1.0666666666666666518636930;
+    value "scale" double: 1.0000000000000000000000000;
     value "scroll_accel_factor" double: 7.0000000000000000000000000;
     value "scroll_animation_disable" uchar: 0;
     value "scroll_smooth_amount" double: 0.0000000000000000000000000;
