--- a/conky/rc.desktop
+++ b/conky/rc.desktop
@@ -104,6 +104,7 @@ $stippled_hr
 ${template1 root / 20}
 ${template1 home /home 20}
 ${template1 volatiles /var/volatiles 10}
+${template1 machines /var/lib/machines 20}
 ${template1 dump /mnt/volatiles 10}
 ${template1 tmp /tmp 30}
 ${color lightgrey}FS_read: ${color #99aaff}${diskio_read}\
