--- a/e/e.cfg.desktop
+++ b/e/e.cfg.desktop
@@ -315,8 +315,8 @@ group "E_Config" struct {
                     value "geom.pos_y" double: 0.1000000000000000055511151;
                     value "geom.res" int: 1054;
                     value "geom.size" int: 24;
-                    value "geom.size_h" double: 0.0700000000000000066613381;
-                    value "geom.size_w" double: 0.0700000000000000066613381;
+                    value "geom.size_h" double: 0.0694444444444444475283973;
+                    value "geom.size_w" double: 0.0697916666666666685170384;
                     value "id" string: "ibox.1";
                     value "name" string: "ibox";
                     value "orient" int: 9;
@@ -5813,7 +5813,7 @@ group "Elm_Config" struct {
     value "cache_flush_poll_interval" int: 512;
     value "clouseau_enable" uchar: 0;
     value "compositing" int: 1;
-    value "config_version" int: 131083;
+    value "config_version" int: 131086;
     value "context_menu_disabled" uchar: 0;
     value "cursor_engine_only" uchar: 0;
     value "desktop_entry" uchar: 1;
@@ -5822,6 +5822,7 @@ group "Elm_Config" struct {
     value "edje_collection_cache" int: 64;
     value "effect_enable" uchar: 1;
     value "engine" string: "";
+    value "entry_select_allow" uchar: 1;
     value "fileselector_double_tap_navigation_enable" uchar: 0;
     value "fileselector_expand_enable" uchar: 1;
     value "finger_size" int: 5;
