--- a/e/e.cfg.desktop
+++ b/e/e.cfg.desktop
@@ -7,42 +7,6 @@ group "E_Config" struct {
         }
     }
     group "desktop_backgrounds" list {
-        group "E_Config_Desktop_Background" struct {
-            value "desk_x" int: 0;
-            value "desk_y" int: 0;
-            value "file" string: "/tmp/bg.png";
-            value "zone" int: 0;
-        }
-        group "E_Config_Desktop_Background" struct {
-            value "desk_x" int: 1;
-            value "desk_y" int: 0;
-            value "file" string: "/tmp/bg.png";
-            value "zone" int: 0;
-        }
-        group "E_Config_Desktop_Background" struct {
-            value "desk_x" int: 2;
-            value "desk_y" int: 0;
-            value "file" string: "/tmp/bg.png";
-            value "zone" int: 0;
-        }
-        group "E_Config_Desktop_Background" struct {
-            value "desk_x" int: 3;
-            value "desk_y" int: 0;
-            value "file" string: "/tmp/bg.png";
-            value "zone" int: 0;
-        }
-        group "E_Config_Desktop_Background" struct {
-            value "desk_x" int: 4;
-            value "desk_y" int: 0;
-            value "file" string: "/tmp/bg.png";
-            value "zone" int: 0;
-        }
-        group "E_Config_Desktop_Background" struct {
-            value "desk_x" int: 5;
-            value "desk_y" int: 0;
-            value "file" string: "/tmp/bg.png";
-            value "zone" int: 0;
-        }
     }
     group "desktop_names" list {
         group "E_Config_Desktop_Name" struct {
@@ -541,9 +505,19 @@ group "E_Config" struct {
             value "zone" uint: 0;
         }
         group "E_Config_Gadcon" struct {
+            value "id" int: 114;
+            value "name" string: "gadman";
+            value "zone" uint: 1;
+        }
+        group "E_Config_Gadcon" struct {
             value "id" int: 115;
             value "name" string: "gadman_top";
             value "zone" uint: 0;
+        }
+        group "E_Config_Gadcon" struct {
+            value "id" int: 115;
+            value "name" string: "gadman_top";
+            value "zone" uint: 1;
         }
     }
     group "mime_icons" list {
@@ -792,9 +766,21 @@ group "E_Config" struct {
             value "priority" int: 0;
         }
         group "E_Config_Module" struct {
+            value "delayed" uchar: 0;
+            value "enabled" uchar: 0;
+            value "name" string: "battery";
+            value "priority" int: 0;
+        }
+        group "E_Config_Module" struct {
             value "delayed" uchar: 1;
             value "enabled" uchar: 1;
             value "name" string: "battery";
+            value "priority" int: 0;
+        }
+        group "E_Config_Module" struct {
+            value "delayed" uchar: 0;
+            value "enabled" uchar: 0;
+            value "name" string: "clock";
             value "priority" int: 0;
         }
         group "E_Config_Module" struct {
@@ -804,9 +790,21 @@ group "E_Config" struct {
             value "priority" int: 0;
         }
         group "E_Config_Module" struct {
+            value "delayed" uchar: 0;
+            value "enabled" uchar: 0;
+            value "name" string: "conf";
+            value "priority" int: 0;
+        }
+        group "E_Config_Module" struct {
             value "delayed" uchar: 1;
             value "enabled" uchar: 1;
             value "name" string: "conf";
+            value "priority" int: 0;
+        }
+        group "E_Config_Module" struct {
+            value "delayed" uchar: 0;
+            value "enabled" uchar: 0;
+            value "name" string: "conf_applications";
             value "priority" int: 0;
         }
         group "E_Config_Module" struct {
@@ -816,9 +814,21 @@ group "E_Config" struct {
             value "priority" int: 0;
         }
         group "E_Config_Module" struct {
+            value "delayed" uchar: 0;
+            value "enabled" uchar: 0;
+            value "name" string: "conf_bindings";
+            value "priority" int: 0;
+        }
+        group "E_Config_Module" struct {
             value "delayed" uchar: 1;
             value "enabled" uchar: 1;
             value "name" string: "conf_bindings";
+            value "priority" int: 0;
+        }
+        group "E_Config_Module" struct {
+            value "delayed" uchar: 0;
+            value "enabled" uchar: 0;
+            value "name" string: "conf_dialogs";
             value "priority" int: 0;
         }
         group "E_Config_Module" struct {
@@ -828,9 +838,21 @@ group "E_Config" struct {
             value "priority" int: 0;
         }
         group "E_Config_Module" struct {
+            value "delayed" uchar: 0;
+            value "enabled" uchar: 0;
+            value "name" string: "conf_display";
+            value "priority" int: 0;
+        }
+        group "E_Config_Module" struct {
             value "delayed" uchar: 1;
             value "enabled" uchar: 1;
             value "name" string: "conf_display";
+            value "priority" int: 0;
+        }
+        group "E_Config_Module" struct {
+            value "delayed" uchar: 0;
+            value "enabled" uchar: 0;
+            value "name" string: "conf_interaction";
             value "priority" int: 0;
         }
         group "E_Config_Module" struct {
@@ -840,9 +862,21 @@ group "E_Config" struct {
             value "priority" int: 0;
         }
         group "E_Config_Module" struct {
+            value "delayed" uchar: 0;
+            value "enabled" uchar: 0;
+            value "name" string: "conf_intl";
+            value "priority" int: 0;
+        }
+        group "E_Config_Module" struct {
             value "delayed" uchar: 1;
             value "enabled" uchar: 1;
             value "name" string: "conf_intl";
+            value "priority" int: 0;
+        }
+        group "E_Config_Module" struct {
+            value "delayed" uchar: 0;
+            value "enabled" uchar: 0;
+            value "name" string: "conf_menus";
             value "priority" int: 0;
         }
         group "E_Config_Module" struct {
@@ -852,9 +886,21 @@ group "E_Config" struct {
             value "priority" int: 0;
         }
         group "E_Config_Module" struct {
+            value "delayed" uchar: 0;
+            value "enabled" uchar: 0;
+            value "name" string: "conf_paths";
+            value "priority" int: 0;
+        }
+        group "E_Config_Module" struct {
             value "delayed" uchar: 1;
             value "enabled" uchar: 1;
             value "name" string: "conf_paths";
+            value "priority" int: 0;
+        }
+        group "E_Config_Module" struct {
+            value "delayed" uchar: 0;
+            value "enabled" uchar: 0;
+            value "name" string: "conf_performance";
             value "priority" int: 0;
         }
         group "E_Config_Module" struct {
@@ -864,9 +910,21 @@ group "E_Config" struct {
             value "priority" int: 0;
         }
         group "E_Config_Module" struct {
+            value "delayed" uchar: 0;
+            value "enabled" uchar: 0;
+            value "name" string: "conf_randr";
+            value "priority" int: 0;
+        }
+        group "E_Config_Module" struct {
             value "delayed" uchar: 1;
             value "enabled" uchar: 1;
             value "name" string: "conf_randr";
+            value "priority" int: 0;
+        }
+        group "E_Config_Module" struct {
+            value "delayed" uchar: 0;
+            value "enabled" uchar: 0;
+            value "name" string: "conf_shelves";
             value "priority" int: 0;
         }
         group "E_Config_Module" struct {
@@ -876,15 +934,33 @@ group "E_Config" struct {
             value "priority" int: 0;
         }
         group "E_Config_Module" struct {
-            value "delayed" uchar: 1;
-            value "enabled" uchar: 1;
+            value "delayed" uchar: 0;
+            value "enabled" uchar: 0;
             value "name" string: "conf_theme";
             value "priority" int: 0;
         }
         group "E_Config_Module" struct {
             value "delayed" uchar: 1;
             value "enabled" uchar: 1;
+            value "name" string: "conf_theme";
+            value "priority" int: 0;
+        }
+        group "E_Config_Module" struct {
+            value "delayed" uchar: 0;
+            value "enabled" uchar: 0;
             value "name" string: "conf_window_manipulation";
+            value "priority" int: 0;
+        }
+        group "E_Config_Module" struct {
+            value "delayed" uchar: 1;
+            value "enabled" uchar: 1;
+            value "name" string: "conf_window_manipulation";
+            value "priority" int: 0;
+        }
+        group "E_Config_Module" struct {
+            value "delayed" uchar: 0;
+            value "enabled" uchar: 0;
+            value "name" string: "conf_window_remembers";
             value "priority" int: 0;
         }
         group "E_Config_Module" struct {
@@ -906,6 +982,12 @@ group "E_Config" struct {
             value "priority" int: 0;
         }
         group "E_Config_Module" struct {
+            value "delayed" uchar: 0;
+            value "enabled" uchar: 0;
+            value "name" string: "everything";
+            value "priority" int: 0;
+        }
+        group "E_Config_Module" struct {
             value "delayed" uchar: 1;
             value "enabled" uchar: 1;
             value "name" string: "everything";
@@ -924,15 +1006,33 @@ group "E_Config" struct {
             value "priority" int: 0;
         }
         group "E_Config_Module" struct {
+            value "delayed" uchar: 0;
+            value "enabled" uchar: 0;
+            value "name" string: "gadman";
+            value "priority" int: 0;
+        }
+        group "E_Config_Module" struct {
             value "delayed" uchar: 1;
             value "enabled" uchar: 1;
             value "name" string: "gadman";
             value "priority" int: 100;
         }
         group "E_Config_Module" struct {
+            value "delayed" uchar: 0;
+            value "enabled" uchar: 0;
+            value "name" string: "ibar";
+            value "priority" int: 0;
+        }
+        group "E_Config_Module" struct {
             value "delayed" uchar: 1;
             value "enabled" uchar: 1;
             value "name" string: "ibar";
+            value "priority" int: 0;
+        }
+        group "E_Config_Module" struct {
+            value "delayed" uchar: 0;
+            value "enabled" uchar: 0;
+            value "name" string: "ibox";
             value "priority" int: 0;
         }
         group "E_Config_Module" struct {
@@ -943,14 +1043,38 @@ group "E_Config" struct {
         }
         group "E_Config_Module" struct {
             value "delayed" uchar: 0;
+            value "enabled" uchar: 0;
+            value "name" string: "lokker";
+            value "priority" int: 0;
+        }
+        group "E_Config_Module" struct {
+            value "delayed" uchar: 0;
             value "enabled" uchar: 1;
             value "name" string: "lokker";
+            value "priority" int: 0;
+        }
+        group "E_Config_Module" struct {
+            value "delayed" uchar: 0;
+            value "enabled" uchar: 0;
+            value "name" string: "luncher";
+            value "priority" int: 0;
+        }
+        group "E_Config_Module" struct {
+            value "delayed" uchar: 1;
+            value "enabled" uchar: 1;
+            value "name" string: "luncher";
             value "priority" int: 0;
         }
         group "E_Config_Module" struct {
             value "delayed" uchar: 1;
             value "enabled" uchar: 0;
             value "name" string: "mixer";
+            value "priority" int: 0;
+        }
+        group "E_Config_Module" struct {
+            value "delayed" uchar: 0;
+            value "enabled" uchar: 0;
+            value "name" string: "msgbus";
             value "priority" int: 0;
         }
         group "E_Config_Module" struct {
@@ -973,8 +1097,20 @@ group "E_Config" struct {
         }
         group "E_Config_Module" struct {
             value "delayed" uchar: 0;
+            value "enabled" uchar: 0;
+            value "name" string: "pager_plain";
+            value "priority" int: 0;
+        }
+        group "E_Config_Module" struct {
+            value "delayed" uchar: 0;
             value "enabled" uchar: 1;
             value "name" string: "pager_plain";
+            value "priority" int: 0;
+        }
+        group "E_Config_Module" struct {
+            value "delayed" uchar: 0;
+            value "enabled" uchar: 0;
+            value "name" string: "shot";
             value "priority" int: 0;
         }
         group "E_Config_Module" struct {
@@ -990,6 +1126,12 @@ group "E_Config" struct {
             value "priority" int: 0;
         }
         group "E_Config_Module" struct {
+            value "delayed" uchar: 0;
+            value "enabled" uchar: 0;
+            value "name" string: "syscon";
+            value "priority" int: 0;
+        }
+        group "E_Config_Module" struct {
             value "delayed" uchar: 1;
             value "enabled" uchar: 1;
             value "name" string: "syscon";
@@ -997,8 +1139,32 @@ group "E_Config" struct {
         }
         group "E_Config_Module" struct {
             value "delayed" uchar: 0;
+            value "enabled" uchar: 0;
+            value "name" string: "sysinfo";
+            value "priority" int: 0;
+        }
+        group "E_Config_Module" struct {
+            value "delayed" uchar: 1;
+            value "enabled" uchar: 1;
+            value "name" string: "sysinfo";
+            value "priority" int: 0;
+        }
+        group "E_Config_Module" struct {
+            value "delayed" uchar: 0;
+            value "enabled" uchar: 0;
+            value "name" string: "systray";
+            value "priority" int: 0;
+        }
+        group "E_Config_Module" struct {
+            value "delayed" uchar: 0;
             value "enabled" uchar: 1;
             value "name" string: "systray";
+            value "priority" int: 0;
+        }
+        group "E_Config_Module" struct {
+            value "delayed" uchar: 0;
+            value "enabled" uchar: 0;
+            value "name" string: "tasks";
             value "priority" int: 0;
         }
         group "E_Config_Module" struct {
@@ -1021,14 +1187,32 @@ group "E_Config" struct {
         }
         group "E_Config_Module" struct {
             value "delayed" uchar: 0;
+            value "enabled" uchar: 0;
+            value "name" string: "time";
+            value "priority" int: 0;
+        }
+        group "E_Config_Module" struct {
+            value "delayed" uchar: 0;
             value "enabled" uchar: 1;
             value "name" string: "time";
+            value "priority" int: 0;
+        }
+        group "E_Config_Module" struct {
+            value "delayed" uchar: 0;
+            value "enabled" uchar: 0;
+            value "name" string: "winlist";
             value "priority" int: 0;
         }
         group "E_Config_Module" struct {
             value "delayed" uchar: 1;
             value "enabled" uchar: 1;
             value "name" string: "winlist";
+            value "priority" int: 0;
+        }
+        group "E_Config_Module" struct {
+            value "delayed" uchar: 0;
+            value "enabled" uchar: 0;
+            value "name" string: "xkbswitch";
             value "priority" int: 0;
         }
         group "E_Config_Module" struct {
@@ -1161,7 +1345,7 @@ group "E_Config" struct {
     value "clientlist_warp_to_iconified_desktop" int: 0;
     value "cnfmdlg_disabled" int: 0;
     value "config_type" uint: 3;
-    value "config_version" int: 1000021;
+    value "config_version" int: 1000024;
     value "cursor_size" int: 32;
     value "default_system_menu" string: "/usr/etc/xdg/menus/enlightenment.menu";
     value "desk_auto_switch" int: 0;
@@ -1186,7 +1370,6 @@ group "E_Config" struct {
     value "desklock_post_screensaver_time" double: 300.0000000000000000000000000;
     value "desklock_start_locked" int: 0;
     value "desklock_use_custom_desklock" int: 0;
-    value "desktop_default_name" string: "%i-%i";
     value "device_auto_mount" int: 0;
     value "device_auto_open" int: 0;
     value "device_desktop" int: 1;
@@ -1283,6 +1466,7 @@ group "E_Config" struct {
     value "screensaver_ask_presentation" uchar: 0;
     value "screensaver_ask_presentation_timeout" double: 30.0000000000000000000000000;
     value "screensaver_blanking" int: 2;
+    value "screensaver_desklock_timeout" int: 0;
     value "screensaver_enable" int: 1;
     value "screensaver_expose" int: 2;
     value "screensaver_interval" int: 0;
@@ -1295,6 +1479,7 @@ group "E_Config" struct {
     value "show_cursor" uchar: 1;
     value "show_desktop_icons" int: 1;
     value "show_splash" int: 0;
+    value "suspend_connected_standby" uchar: 0;
     value "syscon.do_input" uchar: 1;
     value "syscon.extra.icon_size" int: 48;
     value "syscon.main.icon_size" int: 48;
@@ -2413,6 +2598,15 @@ group "Comp_Config" struct {
 }
 ----- file: e_gadget_sites.cfg
 group "E_Gadget_Sites" struct {
+    group "sites" list {
+        group "E_Gadget_Site" struct {
+            value "anchor" uint: 0;
+            value "autoadd" uchar: 0;
+            value "gravity" uint: 0;
+            value "name" string: "__desktop";
+            value "orient" uint: 0;
+        }
+    }
 }
 ----- file: e_randr.cfg
 ----- file: e_randr2.cfg
@@ -2930,6 +3124,18 @@ group "IBox_Config" struct {
         }
     }
 }
+----- file: module.luncher.cfg
+group "Luncher_Config" struct {
+    group "items" list {
+        group "Luncher_Config_Item" struct {
+            value "dir" string: "default";
+            value "id" int: 0;
+            value "preview_size" int: 64;
+            value "type" int: 0;
+            value "version" int: 2;
+        }
+    }
+}
 ----- file: module.mixer.cfg
 group "Mixer_Module_Config" struct {
     group "gadgets" hash {
@@ -2996,6 +3202,43 @@ group "Pager_Config" struct {
 ----- file: module.syscon.cfg
 group "Syscon_Config" struct {
     value "menu" uchar: 0;
+}
+----- file: module.sysinfo.cfg
+group "Sysinfo_Config" struct {
+    group "items" list {
+        group "Sysinfo_Config_Item" struct {
+            value "batman.alert" int: 30;
+            value "batman.alert_p" int: 10;
+            value "batman.alert_timeout" int: 0;
+            value "batman.desktop_notifications" int: 0;
+            value "batman.force_mode" int: 0;
+            value "batman.fuzzy" int: 0;
+            value "batman.poll_interval" int: 512;
+            value "batman.suspend_below" int: 0;
+            value "batman.suspend_method" int: 0;
+            value "cpuclock.auto_powersave" int: 1;
+            value "cpuclock.poll_interval" int: 32;
+            value "cpuclock.pstate_max" int: 101;
+            value "cpuclock.pstate_min" int: 1;
+            value "cpuclock.restore_governor" int: 0;
+            value "cpumonitor.poll_interval" int: 32;
+            value "esm" int: 0;
+            value "id" int: 0;
+            value "memusage.poll_interval" int: 32;
+            value "netstatus.automax" int: 1;
+            value "netstatus.inmax" int: 0;
+            value "netstatus.outmax" int: 0;
+            value "netstatus.poll_interval" int: 32;
+            value "netstatus.receive_units" int: 0;
+            value "netstatus.send_units" int: 0;
+            value "thermal.high" int: 80;
+            value "thermal.low" int: 30;
+            value "thermal.poll_interval" int: 128;
+            value "thermal.sensor_type" int: 0;
+            value "thermal.units" int: 0;
+            value "version" int: 2;
+        }
+    }
 }
 ----- file: module.tasks.cfg
 group "Tasks_Config" struct {
